# llm-playground

./: .gitignore  README.md
chat_with_files/: README.md  app.py  requirements.txt
chat_with_files/loaders/: file_loader.py
chat_with_files/utils/: embedding.py  query.py
crewai_with_websocket/: README.md
crewai_with_websocket/api/: main.py  report.md
crewai_with_websocket/report_generator/: README.md  pyproject.toml  report.md
crewai_with_websocket/report_generator/src/report_generator/: crew.py  main.py
crewai_with_websocket/ui/: index.html
