[project]
name = "report_generator"
version = "0.1.0"
description = "report-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
report_generator = "report_generator.main:run"
run_crew = "report_generator.main:run"
train = "report_generator.main:train"
replay = "report_generator.main:replay"
test = "report_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
